Router Docker script works

--- a/TorRouter/Makefile
+++ b/TorRouter/Makefile
@@ -1,13 +1,19 @@
 
 
 build:
-	docker build --build-arg proj=router --build-arg path=/router/main.py --build-arg port=$(PORT) --build-arg pport=$(PPORT) --build-arg pip=$(PIP) -t router.img ..
+	docker build --build-arg proj=TorRouter --build-arg path=/TorRouter/TorRouter/main.py --build-arg args="$(ARGS)" --build-arg port=$(PORT) -t router.img ..
 
-start: build
-	-docker container start router.cont || docker run -p $(PORT):$(PORT) --privileged --name router.cont router.img
+start: clean build
+	-docker run -p $(PORT):$(PORT) -d --privileged --name router$(CONT).cont router.img &
+
+juststart:
+	-docker run -p $(PORT):$(PORT) -d --privileged --name router$(CONT).cont router.img &
 
 stop:
-	-docker container stop router.cont
+	-docker container stop router$(CONT).cont
 
-clean: stop
-	-docker container rm router.cont
+clean:
+	-docker exec router$(CONT).cont kill -s SIGINT $$(docker exec -it router$(CONT).cont ps | grep 'TorRouter' | awk '{print $$1}') ; \
+	sleep 1 ; \
+    docker container stop router$(CONT).cont ; \
+	docker container rm router$(CONT).cont
